# arcxp

./: Cargo.toml  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  openapi.yaml
.github/workflows/: deploy.yaml
infra/: api-gateway.yaml  certificate-manager.yaml  dynamodb.yaml  lambda.yaml
scripts/: run-dev.sh  run-tests.sh
scripts/localstack/: tickets.sh
src/: app_state.rs  controllers.rs  entities.rs  lib.rs  main.rs  requests.rs  tickets_repository.rs
src/usecases/: assign_ticket.rs  batch_create_tickets.rs  create_ticket.rs  mod.rs  query_tickets.rs  update_ticket_status.rs
tests/: controller_test.rs
tests/common/: mod.rs
