[package]
name = "arcxp"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.98"
aws-config = "1.8.0"
aws-sdk-dynamodb = "1.80.0"
axum = "0.7.9"
axum-aws-lambda = "0.10.0"
chrono = { version = "0.4.41", features = ["serde"] }
lambda_http = "0.15.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v7"] }
serde_json = "1.0.140"

[dev-dependencies]
axum-test = "16.4.1"
serial_test = "3.2.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.59", features = ["vendored"] }
openssl-sys = { version = "0.9.95", features = ["vendored"] }

[features]
test-utils = []
